[Tech Knowledge][이진 탐색트리 또다른 구현및 순회 구현] 23-03-21

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -2249,11 +2249,268 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 이진탐색트리(Binary Search Tree)-또다른 코드 작성 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "[50, 30, 24, 5, 28, 45, 98, 52, 60]\n",
+      "[5, 24, 28, 30, 45, 50, 52, 60, 98]\n",
+      "[5, 28, 24, 45, 30, 60, 52, 98, 50]\n",
+      "[50, 30, 28, 5, 45, 98, 52, 60]\n",
+      "[5, 28, 30, 45, 50, 52, 60, 98]\n",
+      "[5, 28, 45, 30, 60, 52, 98, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 노드 만들기\n",
+    "class Node:\n",
+    "    def __init__(self, data : int):\n",
+    "        self.data = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "# 이진트리 만들기\n",
+    "class BinarySearchTree:\n",
+    "    # 초기값 설정\n",
+    "    def __init__(self) -> None:\n",
+    "        self.head = None\n",
+    "\n",
+    "        self.preorder_list = []\n",
+    "        self.inorder_list = []\n",
+    "        self.postorder_list = []\n",
+    "\n",
+    "    # 추가!!\n",
+    "    def add(self, data:int):\n",
+    "        if self.head is None:\n",
+    "            self.head = Node(data)\n",
+    "        else:\n",
+    "            self.__add_node(self.head, data)\n",
+    "\n",
+    "    # head가 있는 경우\n",
+    "    def __add_node(self, cur, data):\n",
+    "        # print('부모', cur.data, '자식', data)\n",
+    "\n",
+    "        # head 값이 더 크면 왼쪽으로\n",
+    "        if cur.data > data:\n",
+    "            # print(f'move left {data}')\n",
+    "            if cur.left is not None:\n",
+    "                self.__add_node(cur.left, data)\n",
+    "            else:\n",
+    "                cur.left = Node(data)\n",
+    "        # head 값이 더 작으면 오른쪽으로\n",
+    "        else:\n",
+    "            # print(f'move right {data}')\n",
+    "            if cur.right is not None:\n",
+    "                self.__add_node(cur.right, data)\n",
+    "            else:\n",
+    "                cur.right = Node(data)\n",
+    "\n",
+    "    # 찾기!!\n",
+    "    def search(self, data):\n",
+    "        if self.head is None:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return self.__search_node(self.head, data)\n",
+    "        \n",
+    "    def __search_node(self, cur, data):\n",
+    "        # print(f'head = {cur.data}', f'data : {data}')\n",
+    "        # head와 찾으려는 값이 동일한 경우\n",
+    "        if cur.data == data:\n",
+    "            return True\n",
+    "        else:\n",
+    "            # 기준보다 작은경우\n",
+    "            if cur.data > data:\n",
+    "                # 더 작은 왼쪽의 tree가 존재하면 왼쪽으로 더 탐색\n",
+    "                if cur.left is not None:\n",
+    "                    return self.__search_node(cur.left, data)\n",
+    "                # 더 작은 왼쪽의 tree가 존재하지 않으면 존재하지 않는다.\n",
+    "                else:\n",
+    "                    return False\n",
+    "            \n",
+    "            # 기준보다 큰경우\n",
+    "            else:\n",
+    "                # 더 큰 오른쪽의 tree가 존재하면 오른쪽으로 더 탐색\n",
+    "                if cur.right is not None:\n",
+    "                    return self.__search_node(cur.right, data)\n",
+    "                # 더 큰 오른쪽의 tree가 존재하지 않으면 존재하지 않는다.\n",
+    "                else:\n",
+    "                    return False\n",
+    "                \n",
+    "    # 순회 Traverse\n",
+    "    # 전위순회 preorder 1. 루트 방문, 2. 왼쪽 서브트리, 3. 오른쪽 서브트리\n",
+    "    # 완성되어 있는 트리를 다른 서버에 리스트 형태로 보내서 그 서버에서 다시 트리를 구성할 때 사용\n",
+    "    def preorder_traverse(self) -> list:\n",
+    "        self.preorder_list = []\n",
+    "        if self.head is not None:\n",
+    "            self.__preorder(self.head)\n",
+    "\n",
+    "        return self.preorder_list\n",
+    "    \n",
+    "    def __preorder(self, cur):\n",
+    "        self.preorder_list.append(cur.data)\n",
+    "        if cur.left is not None:\n",
+    "            self.__preorder(cur.left)\n",
+    "        if cur.right is not None:\n",
+    "            self.__preorder(cur.right)\n",
+    "\n",
+    "    # 정위순회 inorder 1. 왼쪽, 2. 루트, 3. 오른쪽\n",
+    "    # 오름차순 정렬할 때 n의 시간복잡도로 정렬가능\n",
+    "    def inorder_traverse(self) -> list:\n",
+    "        self.inorder_list = []\n",
+    "        if self.head is not None:\n",
+    "            self.__inorder(self.head)\n",
+    "        \n",
+    "        return self.inorder_list\n",
+    "\n",
+    "    def __inorder(self, cur):\n",
+    "        # 왼쪽 우선\n",
+    "        if cur.left is not None:\n",
+    "            self.__inorder(cur.left)\n",
+    "        \n",
+    "        # 기준\n",
+    "        self.inorder_list.append(cur.data)\n",
+    "\n",
+    "        # 그 다음 오른쪽\n",
+    "        if cur.right is not None:\n",
+    "            self.__inorder(cur.right)\n",
+    "\n",
+    "    # 후위순회 postorder 1. 왼쪽, 2. 오른쪽, 3. 루트\n",
+    "    def postorder_traverse(self):\n",
+    "        self.postorder_list = []\n",
+    "        if self.head is not None:\n",
+    "            self.__postorder(self.head)\n",
+    "\n",
+    "        return self.postorder_list\n",
+    "    \n",
+    "    def __postorder(self, cur):\n",
+    "        if cur.left is not None:\n",
+    "            self.__postorder(cur.left)\n",
+    "        \n",
+    "        if cur.right is not None:\n",
+    "            self.__postorder(cur.right)\n",
+    "\n",
+    "        self.postorder_list.append(cur.data)\n",
+    "\n",
+    "    # 제거!!\n",
+    "    def remove(self, data):\n",
+    "        # 삭제하려는 값이 루트인 경우\n",
+    "        if self.head == data:\n",
+    "            # 1. 자식이 없을 때\n",
+    "            if self.head.left == None and self.head.right == None:\n",
+    "                self.head.data = None\n",
+    "            # 2. 자식이 하나 있을 때\n",
+    "            elif self.head.left != None and self.head.right == None:\n",
+    "                self.head = self.head.left\n",
+    "            elif self.head.left == None and self.head.right != None:\n",
+    "                self.head = self.head.right\n",
+    "            # 3. 자식이 두개 있으때, 오른쪽 Tree의 가장 작은 값을 루트로 변경해 준다.\n",
+    "            else:\n",
+    "                self.head.data = self.__remove_head(self.head.right)\n",
+    "        # 루트가 아닌경우\n",
+    "        else:\n",
+    "            # 루트보다 작은경우\n",
+    "            if self.head.data > data:\n",
+    "                self.__remove(self.head, self.head.left, data)\n",
+    "            # 루트보다 큰경우\n",
+    "            else:\n",
+    "                self.__remove(self.head, self.head.right, data)\n",
+    "\n",
+    "    def __remove(self, parent, cur, data):\n",
+    "        # 삭제하려는 값이 없는 경우\n",
+    "        if cur is None:\n",
+    "            print(f'No data {data}')\n",
+    "        if cur.data == data:\n",
+    "            # 자식이 없는 경우\n",
+    "            if cur.left == None and cur.right == None:\n",
+    "                if parent.left == cur:\n",
+    "                    parent.left = None\n",
+    "                else:\n",
+    "                    parent.right = None\n",
+    "            \n",
+    "            # 자식이 하나 있는 경우\n",
+    "            elif cur.left == None and cur.right != None:\n",
+    "                if parent.left == cur:\n",
+    "                    parent.left = cur.right\n",
+    "                else:\n",
+    "                    parent.right = cur.right\n",
+    "\n",
+    "            elif cur.left != None and cur.right == None:\n",
+    "                if parent.left == cur:\n",
+    "                    parent.left = cur.left\n",
+    "                else:\n",
+    "                    parent.right = cur.left\n",
+    "\n",
+    "            # 자식이 두개 있는 경우\n",
+    "            if cur.left != None and cur.right != None:\n",
+    "                cur.data = self.__remove_head(cur.right).data\n",
+    "                self.__removeitem(cur, cur.right, cur.data)\n",
+    "        else:\n",
+    "            if cur.data > data:\n",
+    "                self.__remove(cur, cur.left, data)\n",
+    "            else:\n",
+    "                self.__remove(cur, cur.right, data)\n",
+    "\n",
+    "    # 자식이 둘인 경우 오른쪽 자식의 가장 왼쪽 자식을 옮기고 그 자식은 삭제\n",
+    "    def __removeitem(self, parent, cur, data):\n",
+    "        if cur.data == data:\n",
+    "            if parent.left == cur:\n",
+    "                parent.left = None\n",
+    "            else:\n",
+    "                parent.right = None\n",
+    "        else:\n",
+    "            if cur.data > data:\n",
+    "                self.__removeitem(cur, cur.left, data)\n",
+    "            else:\n",
+    "                self.__removeitem(cur, cur.right, data)\n",
+    "            \n",
+    "\n",
+    "    def __remove_head(self, cur):\n",
+    "        # 가장 작은 값을 찾기 위해 왼쪽을 확인 후 \n",
+    "        if cur.left == None:\n",
+    "            # 왼쪽 tree가 없으면 전달받은 head의 오른쪽이 가장 작은 값\n",
+    "            return cur\n",
+    "        # 왼쪽이 존재하면 계속해서 탐색    \n",
+    "        else:\n",
+    "            return self.__remove_head(cur.left)\n",
+    "\n",
+    "list = [50, 30, 24, 5, 28, 45, 98, 52, 60]\n",
+    "binary = BinarySearchTree()\n",
+    "for num in list:\n",
+    "    binary.add(num)\n",
+    "\n",
+    "print(binary.search(60))\n",
+    "print(binary.search(1))\n",
+    "\n",
+    "# 전위\n",
+    "print(binary.preorder_traverse())\n",
+    "# 중위\n",
+    "print(binary.inorder_traverse())\n",
+    "# 후위\n",
+    "print(binary.postorder_traverse())\n",
+    "\n",
+    "binary.remove(24)\n",
+    "\n",
+    "# 전위\n",
+    "print(binary.preorder_traverse())\n",
+    "# 중위\n",
+    "print(binary.inorder_traverse())\n",
+    "# 후위\n",
+    "print(binary.postorder_traverse())\n"
+   ]
   }
  ],
  "metadata": {
