[Tech Knowledge][자료구조-힙(Heap)의 파이썬 구현] 23-03-23

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -2511,6 +2511,330 @@
     "# 후위\n",
     "print(binary.postorder_traverse())\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 힙(Heap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 힙\n",
+    "class Heap:\n",
+    "    def __init__(self, data) -> None:\n",
+    "        self.heap_array = []\n",
+    "        self.heap_array.append(data)\n",
+    "\n",
+    "heap = Heap(1)\n",
+    "print(heap.heap_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, 1]\n",
+      "True\n",
+      "[None, 1, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 힙\n",
+    "class Heap:\n",
+    "    def __init__(self, data) -> None:\n",
+    "        self.heap_array = []\n",
+    "        self.heap_array.append(None)  # 루트노드를 1부터 시작하기 위함 \n",
+    "        self.heap_array.append(data)\n",
+    "\n",
+    "    def insert(self, data) -> bool:\n",
+    "        self.heap_array.append(data)\n",
+    "        return True\n",
+    "\n",
+    "heap = Heap(1)\n",
+    "print(heap.heap_array)\n",
+    "print(heap.insert(6))\n",
+    "print(heap.heap_array)\n",
+    "\n",
+    "'''\n",
+    "[None, 1]\n",
+    "True\n",
+    "[None, 1, 6]\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, 20, 10, 15, 5, 4, 8]"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 힙\n",
+    "class Heap:\n",
+    "    def __init__(self, data) -> None:\n",
+    "        self.heap_array = []\n",
+    "        self.heap_array.append(None)  # 루트노드를 1부터 시작하기 위함 \n",
+    "        self.heap_array.append(data)\n",
+    "        \n",
+    "    def insert(self, data) -> bool:\n",
+    "        if len(self.heap_array) == 1:\n",
+    "            self.heap_array.append(data)\n",
+    "            return True\n",
+    "        \n",
+    "        self.heap_array.append(data)\n",
+    "        inserted_index = len(self.heap_array)-1  # 마지막 노드 인덱스\n",
+    "\n",
+    "        # 부모가 자식보다 작은 경우 위치 변경\n",
+    "        while self.__move_up(inserted_index):\n",
+    "            parent_index = inserted_index // 2\n",
+    "            self.heap_array[inserted_index], self.heap_array[parent_index]= self.heap_array[parent_index], self.heap_array[inserted_index]\n",
+    "            inserted_index = parent_index  # 부모자리로 변경된 노드가 또 상위 부모노드보다 큰지 비교하기 위한 할당\n",
+    "        return True\n",
+    "    \n",
+    "    def __move_up(self, inserted_index):\n",
+    "        if inserted_index <= 1:\n",
+    "            return False\n",
+    "        \n",
+    "        # 마지막 노드의 부모 인덱스\n",
+    "        # 부모가 더 작으면 True 반환, 부모가 작으면 False 반환\n",
+    "        parent_index = inserted_index // 2  \n",
+    "        if self.heap_array[inserted_index] > self.heap_array[parent_index]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "heap = Heap(15)\n",
+    "heap.insert(10)\n",
+    "heap.insert(8)\n",
+    "heap.insert(5)\n",
+    "heap.insert(4)\n",
+    "heap.insert(20)\n",
+    "heap.heap_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 힙\n",
+    "class Heap:\n",
+    "    def __init__(self, data) -> None:\n",
+    "        self.heap_array = []\n",
+    "        self.heap_array.append(None)  # 루트노드를 1부터 시작하기 위함 \n",
+    "        self.heap_array.append(data)\n",
+    "\n",
+    "    def insert(self, data) -> bool:\n",
+    "        if len(self.heap_array) == 1:\n",
+    "            self.heap_array.append(data)\n",
+    "            return True\n",
+    "        \n",
+    "        self.heap_array.append(data)\n",
+    "        inserted_index = len(self.heap_array)-1  # 마지막 노드 인덱스\n",
+    "\n",
+    "        # 부모가 자식보다 작은 경우 위치 변경\n",
+    "        while self.__move_up(inserted_index):\n",
+    "            parent_index = inserted_index // 2\n",
+    "            self.heap_array[inserted_index], self.heap_array[parent_index]= self.heap_array[parent_index], self.heap_array[inserted_index]\n",
+    "            inserted_index = parent_index  # 부모자리로 변경된 노드가 또 상위 부모노드보다 큰지 비교하기 위한 할당\n",
+    "        return True\n",
+    "    \n",
+    "    def __move_up(self, inserted_index):\n",
+    "        if inserted_index <= 1:\n",
+    "            return False\n",
+    "        \n",
+    "        # 마지막 노드의 부모 인덱스\n",
+    "        # 부모가 더 작으면 True 반환, 부모가 작으면 False 반환\n",
+    "        parent_index = inserted_index // 2  \n",
+    "        if self.heap_array[inserted_index] > self.heap_array[parent_index]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if len(self.heap_array) <= 1:\n",
+    "            return None\n",
+    "        \n",
+    "        returned_data = self.heap_array[1]\n",
+    "        return returned_data\n",
+    "\n",
+    "heap = Heap(15)\n",
+    "heap.insert(10)\n",
+    "heap.insert(8)\n",
+    "heap.insert(5)\n",
+    "heap.insert(4)\n",
+    "heap.insert(20)\n",
+    "heap.heap_array\n",
+    "\n",
+    "print(heap.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, 15, 10, 8, 5, 4]"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 힙\n",
+    "class Heap:\n",
+    "    def __init__(self, data) -> None:\n",
+    "        self.heap_array = []\n",
+    "        self.heap_array.append(None)  # 루트노드를 1부터 시작하기 위함 \n",
+    "        self.heap_array.append(data)\n",
+    "\n",
+    "    def insert(self, data) -> bool:\n",
+    "        if len(self.heap_array) == 1:\n",
+    "            self.heap_array.append(data)\n",
+    "            return True\n",
+    "        \n",
+    "        self.heap_array.append(data)\n",
+    "        inserted_index = len(self.heap_array)-1  # 마지막 노드 인덱스\n",
+    "\n",
+    "        # 부모가 자식보다 작은 경우 위치 변경\n",
+    "        while self.__move_up(inserted_index):\n",
+    "            parent_index = inserted_index // 2\n",
+    "            self.heap_array[inserted_index], self.heap_array[parent_index]= self.heap_array[parent_index], self.heap_array[inserted_index]\n",
+    "            inserted_index = parent_index  # 부모자리로 변경된 노드가 또 상위 부모노드보다 큰지 비교하기 위한 할당\n",
+    "        return True\n",
+    "    \n",
+    "    def __move_up(self, inserted_index):\n",
+    "        if inserted_index <= 1:\n",
+    "            return False\n",
+    "        \n",
+    "        # 마지막 노드의 부모 인덱스\n",
+    "        # 부모가 더 작으면 True 반환, 부모가 작으면 False 반환\n",
+    "        parent_index = inserted_index // 2  \n",
+    "        if self.heap_array[inserted_index] > self.heap_array[parent_index]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if len(self.heap_array) <= 1:\n",
+    "            return None\n",
+    "        \n",
+    "        returned_data = self.heap_array[1]\n",
+    "        self.heap_array[1] = self.heap_array[-1]  # 루트노드에 가장 하위노드 값 할당\n",
+    "        del self.heap_array[-1]  # 할당한 노드의 값은 제거\n",
+    "        popped_index = 1\n",
+    "\n",
+    "        while self.__move_down(popped_index):\n",
+    "            left_child_popped_index = popped_index * 2  # 왼쪽 자식노드 index 구하기\n",
+    "            right_child_popped_index = (popped_index * 2) + 1 # 오른쪽 자식노드 index 구하기\n",
+    "\n",
+    "            if right_child_popped_index >= len(self.heap_array):\n",
+    "                self.heap_array[popped_index], self.heap_array[left_child_popped_index] = self.heap_array[left_child_popped_index], self.heap_array[popped_index]\n",
+    "                popped_index = left_child_popped_index\n",
+    "            else:\n",
+    "                if self.heap_array[left_child_popped_index] > self.heap_array[right_child_popped_index]:\n",
+    "                    self.heap_array[popped_index], self.heap_array[left_child_popped_index] = self.heap_array[left_child_popped_index], self.heap_array[popped_index]\n",
+    "                    popped_index = left_child_popped_index\n",
+    "                else:\n",
+    "                    self.heap_array[popped_index], self.heap_array[right_child_popped_index] = self.heap_array[right_child_popped_index], self.heap_array[popped_index]\n",
+    "                    popped_index = right_child_popped_index\n",
+    "\n",
+    "        return returned_data\n",
+    "    \n",
+    "    def __move_down(self, popped_index):\n",
+    "        left_child_popped_index = popped_index * 2  # 왼쪽 자식노드 index 구하기\n",
+    "        right_child_popped_index = (popped_index * 2) + 1  # 오른쪽 자식노드 index 구하기\n",
+    "\n",
+    "        if left_child_popped_index >= len(self.heap_array):\n",
+    "            return False\n",
+    "        elif right_child_popped_index >= len(self.heap_array):\n",
+    "            # 루트노드 보다 왼쪽 하위노드가 더 큰 경우\n",
+    "            if self.heap_array[popped_index] < self.heap_array[left_child_popped_index]:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        else:\n",
+    "            if self.heap_array[left_child_popped_index] > self.heap_array[right_child_popped_index]:\n",
+    "                if self.heap_array[popped_index] < self.heap_array[left_child_popped_index]:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    return False\n",
+    "            else:\n",
+    "                if self.heap_array[popped_index] < self.heap_array[right_child_popped_index]:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    return False\n",
+    "\n",
+    "heap = Heap(15)\n",
+    "heap.insert(10)\n",
+    "heap.insert(8)\n",
+    "heap.insert(5)\n",
+    "heap.insert(4)\n",
+    "heap.insert(20)\n",
+    "heap.heap_array\n",
+    "\n",
+    "print(heap.pop())\n",
+    "heap.heap_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
