[Tech Knowledge][힙 정렬(Heap Sort) 학습] 23-03-26

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -2830,6 +2830,145 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 힙 정렬(Heap Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def heap_sort(array):\n",
+    "    length = len(array)\n",
+    "\n",
+    "    # 최대 힙\n",
+    "    for i in range(1, length):\n",
+    "        child = i\n",
+    "        while child != 0:\n",
+    "            parent = (child-1)//2\n",
+    "            if array[parent] < array[child]:\n",
+    "                array[parent], array[child] = array[child], array[parent]\n",
+    "            child = parent\n",
+    "\n",
+    "    # 힙 만들기\n",
+    "    for node in range(length-1, -1, -1):\n",
+    "        # 루트 노드와 마지막 노드를 교환\n",
+    "        # 값이 큰 순서대로 힙의 끝에 저장\n",
+    "        array[0], array[node] = array[node], array[0]\n",
+    "        parent = 0\n",
+    "        child = 1\n",
+    "\n",
+    "        # 정렬이 미완료 된 노드들 사이에서\n",
+    "        # 마지막 노드 자리 보내준 루트 노드를 제외한 가장 큰 값을 찾고\n",
+    "        # 루트 노드 자리로 온 마지막 노드의 자리 찾기\n",
+    "        while child < node:\n",
+    "            child = parent*2 + 1\n",
+    "            # 마지막 노드 자리로 보낸 루트 노드를 제외한 가장 큰 노드를 찾기 위해\n",
+    "            if child < node -1 and array[child] < array[child+1]:\n",
+    "                child += 1\n",
+    "\n",
+    "            # 마지막 노드 자리로 보낸 루트 노드를 제외한 가장 큰 노드를 루트 자리로 보내기 위한 과정\n",
+    "            if child < node and array[parent] < array[child]:\n",
+    "                array[parent], array[child] = array[child], array[parent]\n",
+    "            \n",
+    "            parent = child\n",
+    "    return array\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    array = random.sample(range(0, 10), 10)\n",
+    "    print(heap_sort(array))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 1, 8, 2, 0, 7, 9, 6, 5]\n",
+      "[9, 8, 7, 6, 5, 0, 1, 3, 4, 2]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# 힙 정렬\n",
+    "class HeapSort:\n",
+    "    def __init__(self, array):\n",
+    "        self.array = array\n",
+    "\n",
+    "    # 최대 힙 만들기\n",
+    "    def maxheap(self):\n",
+    "        length = len(self.array)\n",
+    "\n",
+    "        for i in range(1, length):\n",
+    "            child = i\n",
+    "            while child != 0:\n",
+    "                # 부모 노드 index\n",
+    "                parent = (child-1)//2 \n",
+    "\n",
+    "                # 자식노드가 부모노드보다 크면 위치 변경\n",
+    "                if self.array[parent] < self.array[child]:\n",
+    "                    self.array[parent], array[child] = self.array[child], self.array[parent]\n",
+    "                # 최대값이 루트까지 도달할 수 있도록\n",
+    "                child = parent\n",
+    "        return self.array\n",
+    "\n",
+    "    # 정렬\n",
+    "    def sort(self):\n",
+    "        length = len(self.array)\n",
+    "\n",
+    "        # 끝에서 루트로 역으로 탐색\n",
+    "        for node in range(length-1, -1, -1):\n",
+    "            # 루트노드를 가장 끝으로 보냄\n",
+    "            self.array[0], self.array[node] = self.array[node], self.array[0]\n",
+    "            parent = 0\n",
+    "            child = 1\n",
+    "\n",
+    "            # 마지막 노드 자리로 보내준 루트 노드를 제외한 가장 큰 값 찾기\n",
+    "            # 루트 노드 자리로 온 마지막 노드의 자리 찾기\n",
+    "            while child < node:\n",
+    "                child = parent*2 +1\n",
+    "                if child < node-1 and self.array[child] < self.array[child+1]:\n",
+    "                    child += 1\n",
+    "                \n",
+    "                if child < node and self.array[parent] < self.array[child]:\n",
+    "                    self.array[parent], self.array[child] = self.array[child], self.array[parent]\n",
+    "\n",
+    "                parent = child\n",
+    "        return self.array\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    array = random.sample(range(0, 10), 10)\n",
+    "    print(array)\n",
+    "\n",
+    "    heap = HeapSort(array)\n",
+    "    print(heap.maxheap())\n",
+    "    print(heap.sort())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
