[Tech Knowledge][파이썬으로 구현한 기수정렬] 23-04-01

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -2969,11 +2969,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 기수 정렬(Radix Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0508', '0515', '0915', '1111', '0101', '0301', '0815']\n",
+      "1 회차 정렬 : ['1111', '0101', '0301', '0515', '0915', '0815', '0508']\n",
+      "2 회차 정렬 : ['0101', '0301', '0508', '1111', '0515', '0915', '0815']\n",
+      "3 회차 정렬 : ['0101', '1111', '0301', '0508', '0515', '0815', '0915']\n",
+      "4 회차 정렬 : ['0101', '0301', '0508', '0515', '0815', '0915', '1111']\n",
+      "['0101', '0301', '0508', '0515', '0815', '0915', '1111']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기수 정렬\n",
+    "def radix_sort(items: list):\n",
+    "\n",
+    "    # 끝자리부터 비교\n",
+    "    pointer = -1\n",
+    "\n",
+    "    # 최대값의 길이\n",
+    "    max_len = max([len(str(item)) for item in items])\n",
+    "\n",
+    "    for i in range(max_len):\n",
+    "        # 분배를 위한 버킷 생성\n",
+    "        buckit = [[] for __ in range(10)]\n",
+    "\n",
+    "        for item in items:\n",
+    "            radix = 0\n",
+    "            try:\n",
+    "                # item에 자리수 값 선정\n",
+    "                radix = int(str(item)[pointer])\n",
+    "            except IndexError:\n",
+    "                pass\n",
+    "\n",
+    "            # 자리수 값을 생성한 버킷에 분배\n",
+    "            buckit[radix].append(item)\n",
+    "        \n",
+    "        items = []\n",
+    "        for x in range(10):\n",
+    "            for y in range(len(buckit[x])):\n",
+    "                items.append(buckit[x][y])\n",
+    "        pointer -= 1\n",
+    "        print(f'{i + 1} 회차 정렬 : {items}')\n",
+    "    return items\n",
+    "\n",
+    "radix = ['0508', '0515', '0915', '1111', '0101', '0301', '0815']\n",
+    "print(radix)\n",
+    "print(radix_sort(radix))"
+   ]
   }
  ],
  "metadata": {
