--- a/traning.ipynb
+++ b/traning.ipynb
@@ -3030,6 +3030,106 @@
     "print(radix)\n",
     "print(radix_sort(radix))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 계수 정렬(Counting Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array : [7, 5, 9, 0, 3, 1, 6, 2, 9, 1, 4, 8, 0, 5, 2, 10, 0, 11]\n",
+      "count array : [3, 2, 2, 1, 1, 2, 1, 1, 1, 2, 1, 1]\n",
+      "result array : [0, 0, 0, 1, 1, 2, 2, 3, 4, 5, 5, 6, 7, 8, 9, 9, 10, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모든 원소의 값이 0보다 크거나 같다고 가정\n",
+    "array = [7, 5, 9, 0, 3, 1, 6, 2, 9, 1, 4, 8, 0, 5, 2, 10, 0, 11]\n",
+    "print(f'array : {array}')\n",
+    "\n",
+    "# 모든 범위를 포함하는 리스트 선언(모든 값은 0으로 초기화)\n",
+    "count = [0] * (max(array)+1)\n",
+    "\n",
+    "for num in array:\n",
+    "    # 각 데이터에 해당하는 인덱스의 값 증가\n",
+    "    count[num] += 1\n",
+    "print(f'count array : {count}')\n",
+    "\n",
+    "res = []\n",
+    "for i in range(len(count)):\n",
+    "    for j in range(count[i]):\n",
+    "        res.append(i)\n",
+    "\n",
+    "print(f'result array : {res}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 5, 9, 0, 3, 1, 6, 2, 9, 1, 4, 8, 0, 5, 2, 10, 0, 11]\n",
+      "[0, 0, 0, 1, 1, 2, 2, 3, 4, 5, 5, 6, 7, 8, 9, 9, 10, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모든 원소의 값이 0보다 크거나 같다고 가정\n",
+    "array = [7, 5, 9, 0, 3, 1, 6, 2, 9, 1, 4, 8, 0, 5, 2, 10, 0, 11]\n",
+    "print(array)\n",
+    "\n",
+    "class CountingSort:\n",
+    "    def __init__(self, array):\n",
+    "        self.array = array\n",
+    "\n",
+    "    def sort(self):\n",
+    "\n",
+    "        # 카운팅 계수 리스트 생성\n",
+    "        count_array = self.__get_count_array(self.array)\n",
+    "\n",
+    "        res = []\n",
+    "        for i in range(len(count_array)):\n",
+    "            for j in range(count_array[i]):\n",
+    "                res.append(i)\n",
+    "        return res\n",
+    "\n",
+    "    def __get_count_array(self, array):\n",
+    "        count = [0]*(len(array)+1)\n",
+    "        for num in array:\n",
+    "            count[num] += 1\n",
+    "        return count\n",
+    "    \n",
+    "count_sort = CountingSort(array)\n",
+    "print(count_sort.sort())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
